misc/paperless-ngx/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-frontend
  namespace: paperless
spec:
  selector:
    app: paperless
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
